--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
       </div>
     </footer>
 
-  </div><!-- .main.container -->
+  </div>.main.container
 
     <!-- JavaScript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
