--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -12,10 +12,11 @@
           <h1 class="text-center">{{site.title}}</h1>
           {% endif %}
 
-          {% if site.description != '' or site.enable_contact == true %}
+          {% if site.description == true or site.enable_contact == true %}
+
           <p class="text-center">
-            {% if site.description != '' %}
-            {{site.description}}
+            {% if site.description == true %}
+            {% include description-content.html %}
             {% endif %}
 
             {% if site.enable_contact == true %}
@@ -33,8 +34,8 @@
             {% if site.github_username != '' %}
               <a href="https://github.com/{{ site.github_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-github fa-lg"></i>Github</button></a>
             {% endif %}
-            {% if site.medium_username != '' %}
-              <a href="https://{{ site.medium_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-medium fa-lg"></i>Medium</button></a>
+            {% if site.github_username != '' %}
+              <a href="https://linkedin.com/in/{{ site.linkedin_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-lg"></i>Linkedin</button></a>
             {% endif %}
 
           </div>
@@ -42,10 +43,6 @@
         </div>
 
       </div>
-
-      <a class="section-jump text-center" href="#portfolio">
-        <i class="fa fa-angle-down fa-3x"></i>
-      </a>
 
     </div>
 
