--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,6 @@
           </div>
         </div>
       </div>
-    </main>
+    </main> 
 
-{% include footer.html %}
+<!-- {% include footer.html %}
