--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,12 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/animate.min.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+   <link rel="stylesheet" href="css/animate.min.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/animate.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css"> -->
+
   <!-- <link rel="stylesheet" href="{{ "/css/animate.min.css" | prepend: site.baseurl }}"> -->
   <!-- <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}"> -->
 
