--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.url }}/feed.xml">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.url }}/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.email }}" href="{{ site.url }}/feed.xml">
+  <link rel="alternate" type="application/atom+xml" title="{{ site.title }} - {{ site.email }}" href="{{ site.url }}/atom.xml">
 
   <!-- Favicons -->
   <link rel="icon" href="img/ztangle.svg" >
