--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -19,13 +19,10 @@
             {% if site.description == true %}
             {% include description-content.html %}
             {% endif %}
-
-            {% if site.enable_contact == true %}
-            {% include contact.html %}
-            {% include contact-modal.html %}
-            {% endif %}
           </p>
           {% endif %}
+
+
 
           <div class="hero-buttons">
 
@@ -41,6 +38,10 @@
 
           </div>
 
+          <p class="text-center">
+            {% include research-content.html %}
+          </p>
+
         </div>
 
       </div>
@@ -50,3 +51,4 @@
   </div>
 
 </div>
+
