make website responsive, fix spacing, buttons, and content

--- a/_includes/description-content.html
+++ b/_includes/description-content.html
@@ -3,10 +3,10 @@ I'm a senior studying Computer Science at UC Berkeley interested in robotics, al
 </p>
 
 <p>
-I'm currently a research assistant at <a href="https://bair.berkeley.edu/" target="_blank">BAIR</a> in Professor Goldberg's <a href="https://autolab.berkeley.edu/" target="_blank">AutoLab</a> where I work on problems in robot grasping and manipulation using analytic theory and deep learning. 
-As an avid enjoyer of discrete math and probability who also loves to talk, I was also a TA for <a href="https://www.eecs70.org/" target="_blank">CS 70</a>.
+I'm currently a research assistant at <a href="https://bair.berkeley.edu/" target="_blank">BAIR</a> in Professor Goldberg's <a href="https://autolab.berkeley.edu/" target="_blank">AUTOLab</a> where I work on problems in robot grasping and manipulation using analytic theory and deep learning. 
+Previously, I worked on recommendation systems and anomaly detection at <a href="https://about.meta.com/" target="_blank">Meta</a> and <a href="https://abacus.ai/" target="_blank">Abacus.AI</a>. As an avid enjoyer of discrete math and probability who also loves to talk, I was also a TA for <a href="https://www.eecs70.org/" target="_blank">CS 70</a>.
 </p>
 
 <p>
- In my free time, I enjoy dancing Kathak (an Indian Classical Dance form) with <a href=" https://www.instagram.com/nazakatatberkeley/" target="_blank">Nazakat</a>,  running, and playing frisbee and tennis with friends!
+In my free time, I enjoy dancing Kathak (an Indian Classical Dance form) with <a href=" https://www.instagram.com/nazakatatberkeley/" target="_blank">Nazakat</a>,  running, and playing frisbee and tennis with friends!
 </p>
