--- a/_includes/research-content.html
+++ b/_includes/research-content.html
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-md-4">
     <p>
-      <img src="img/handloom_cropped.png" width = "200" height =  "200" >
+      <img src="img/handloom_cropped.png" style="width: 100%;">
     </p>
   </div>
   <div class="col-md-8">
@@ -20,10 +20,8 @@
         Vainavi Viswanath<sup>*</sup>, Kaushik Shivakumar<sup>*</sup>, <b>Mallika Parulekar<sup>+</sup></b>, Jainil Ajmera<sup>+</sup>,  Justin Kerr, Jeffrey Ichnowski, Richard Cheng, Thomas Kollar, Ken Goldberg
 
     </p>
-
     <p>
-        Oral Presentation, Conference on Robot Learning (CoRL), 2023
-    
+        Conference on Robot Learning (CoRL), 2023. <i>Oral Presentation</i>.
     <p>
         <a href="https://arxiv.org/pdf/2303.08975.pdf">[Paper]</a>
         <a href="https://sites.google.com/view/cable-tracing">[Website]</a>
@@ -35,14 +33,10 @@
   </div>
 </div>
 
-
-
-
-
 <div class="row">
   <div class="col-md-4">
     <p>
-      <img src="img/mog.png" width = "150" height =  "150" >
+      <img src="img/mog.png" style="width: 100%;">
     </p>
   </div>
   <div class="col-md-8">
@@ -54,8 +48,7 @@
         Wisdom C. Agboh<sup>*</sup>, Satvik Sharma<sup>*</sup>, Kishore Srinivas, <b>Mallika Parulekar</b>, Gaurav Datta, Tianshuang Qiu, Jeffrey Ichnowski, Eugen Solowjow, Mehmet Dogar, Ken Goldberg
     </p>
     <p>
-      Accepted to International Conference on Intelligent Robots and Systems (IROS), 2023
-  
+      International Conference on Intelligent Robots and Systems (IROS), 2023.
     <p>
     <p>
         <a href="https://arxiv.org/pdf/2210.07420.pdf">[Paper]</a>
@@ -64,11 +57,10 @@
   </div>
 </div>
 
-
 <div class="row">
   <div class="col-md-4">
     <p>
-      <img src="img/mindful4.png" width = "250" height =  "125" >
+      <img src="img/mindful4.png" style="width: 100%;">
     </p>
   </div>
   <div class="col-md-8">
@@ -78,11 +70,9 @@
     <p>
         <!-- add author list -->
         <b>Mallika Parulekar</b>, Leelavati Narlikar
-
     </p>
     <p>
-      Poster at Great Lakes Bioinformatics Conference (GLBIO), 2019
-  
+      Great Lakes Bioinformatics Conference (GLBIO), 2019.
     <p>
     <p>
         <a href="https://www.biorxiv.org/content/10.1101/805820v1">[Paper]</a>
