--- a/_includes/description-content.html
+++ b/_includes/description-content.html
@@ -3,7 +3,7 @@ I'm an incoming M.S. CS student at Stanford University specializing in Artificia
 </p>
 
 <p>
-I completed my undergraduate degree from UC Berkeley in Computer Science. There, I was a research assistant at <a href="https://bair.berkeley.edu/" target="_blank">BAIR</a> in Professor Goldberg's <a href="https://autolab.berkeley.edu/" target="_blank">AUTOLab</a> where I work on problems in robot grasping and manipulation using analytic theory and deep learning. 
+I completed my undergraduate degree from UC Berkeley in Computer Science. There, I was a research assistant at <a href="https://bair.berkeley.edu/" target="_blank">BAIR</a> in Professor Goldberg's <a href="https://autolab.berkeley.edu/" target="_blank">AUTOLab</a> where I worked on problems in robot grasping and manipulation using analytic theory and deep learning. 
 Previously, I worked on recommendation systems and anomaly detection at <a href="https://about.meta.com/" target="_blank">Meta</a> and <a href="https://abacus.ai/" target="_blank">Abacus.AI</a>. As an avid enjoyer of discrete math and probability who also loves to talk, I was also a TA for <a href="https://www.eecs70.org/" target="_blank">CS 70</a>.
 </p>
 
