website bio update

--- a/_includes/description-content.html
+++ b/_includes/description-content.html
@@ -1,12 +1,12 @@
 <p>
-I'm an incoming M.S. CS student at Stanford University specializing in Artificial Intelligence. I'm broadly interested in algorithms, machine learning, human-ai interaction and game theory. 
+I'm an Masters Student in Computer Science at Stanford University specializing in Artificial Intelligence. I'm broadly interested in applying machine learning to high-impact problems in learning, robotics and recommendation systems. 
 </p>
 
 <p>
-I completed my undergraduate degree from UC Berkeley in Computer Science. There, I was a research assistant at <a href="https://bair.berkeley.edu/" target="_blank">BAIR</a> in Professor Goldberg's <a href="https://autolab.berkeley.edu/" target="_blank">AUTOLab</a> where I worked on problems in robot grasping and manipulation using analytic theory and deep learning. 
-Previously, I worked on recommendation systems and anomaly detection at <a href="https://about.meta.com/" target="_blank">Meta</a> and <a href="https://abacus.ai/" target="_blank">Abacus.AI</a>. As an avid enjoyer of discrete math and probability who also loves to talk, I was also a TA for <a href="https://www.eecs70.org/" target="_blank">CS 70</a>.
+I completed my undergraduate degree from UC Berkeley in Computer Science. There, I was a research assistant at <a href="https://bair.berkeley.edu/" target="_blank">BAIR</a> in Professor Goldberg's <a href="https://autolab.berkeley.edu/" target="_blank">AUTOLab</a> where I worked on problems in robot grasping and cable manipulation using analytic theory and deep learning. 
+Previously, I worked on recommendation systems at  <a href="https://about.meta.com/" target="_blank">Meta</a>, backend and fullstack development at <a href="https://carohq.com/" target="_blank">Caro</a>, and anomaly detection at <a href="https://abacus.ai/" target="_blank">Abacus.AI</a>. As an avid enjoyer of discrete math and probability who loves teaching, I was also a TA for <a href="https://www.eecs70.org/" target="_blank">CS 70</a>.
 </p>
 
 <p>
-In my free time, I enjoy dancing Kathak (an Indian Classical Dance form) with <a href=" https://www.instagram.com/nazakatatberkeley/" target="_blank">Nazakat</a>,  and playing ultimate frisbee!
+In my free time, I enjoy playing ultimate frisbee with <a href="https://web.stanford.edu/group/superfly/cgi-bin/wordpress/" target="_blank">Stanford Women's Ultimate</a>
 </p>
